[gd_scene load_steps=10 format=3 uid="uid://dblq8osh4gcru"]

[ext_resource type="Script" path="res://scenes/gameplay/hud/psych.gd" id="1_uin6h"]
[ext_resource type="Texture2D" uid="uid://dld56rmrbxk8f" path="res://assets/sprites/ui/normal/healthBar.png" id="2_qdudh"]
[ext_resource type="Script" path="res://scenes/ui/health_bar.gd" id="3_nslve"]
[ext_resource type="Texture2D" uid="uid://cshoihsf026ps" path="res://assets/sprites/characters/icons/dad.png" id="4_4icqr"]
[ext_resource type="Texture2D" uid="uid://bqbsv48mg5br4" path="res://assets/sprites/characters/icons/bf.png" id="5_khj4r"]
[ext_resource type="FontFile" uid="uid://d2n5gv6tiowah" path="res://assets/fonts/vcr.ttf" id="6_m6r0g"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_t65mt"]
bg_color = Color(0, 0, 0, 1)
corner_detail = 1
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6y843"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0, 0, 0, 1)
corner_detail = 1
anti_aliasing = false

[sub_resource type="LabelSettings" id="LabelSettings_daqce"]
font = ExtResource("6_m6r0g")
font_size = 32
outline_size = 6
outline_color = Color(0, 0, 0, 1)

[node name="psych" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_uin6h")

[node name="health_bar" type="TextureProgressBar" parent="." node_paths=PackedStringArray("icons")]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.5
offset_top = 286.5
offset_right = 300.5
offset_bottom = 305.5
grow_horizontal = 2
grow_vertical = 2
value = 50.0
fill_mode = 1
texture_under = ExtResource("2_qdudh")
texture_progress = ExtResource("2_qdudh")
tint_under = Color(1, 0, 0, 1)
tint_progress = Color(0.333333, 1, 0, 1)
script = ExtResource("3_nslve")
icons = [null, null]

[node name="player2" type="Sprite2D" parent="health_bar"]
position = Vector2(299, -8)
texture = ExtResource("4_4icqr")
offset = Vector2(-50, 0)
hframes = 2

[node name="player1" type="Sprite2D" parent="health_bar"]
position = Vector2(303, 5)
texture = ExtResource("5_khj4r")
offset = Vector2(50, 0)
flip_h = true
hframes = 2

[node name="status_label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -42.0
offset_bottom = -24.0
grow_horizontal = 2
grow_vertical = 0
pivot_offset = Vector2(640, 678)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 6
theme_override_fonts/font = ExtResource("6_m6r0g")
theme_override_font_sizes/font_size = 20
text = "Score: 0 | Misses: 0 | Rating: ?"
horizontal_alignment = 1
vertical_alignment = 1

[node name="timer" type="ProgressBar" parent="."]
custom_minimum_size = Vector2(400, 19)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.344
anchor_top = 0.025
anchor_right = 0.656
anchor_bottom = 0.053
offset_left = -0.320007
offset_top = 1.0
offset_right = 0.319946
offset_bottom = -0.160004
grow_horizontal = 2
theme_override_styles/background = SubResource("StyleBoxFlat_t65mt")
theme_override_styles/fill = SubResource("StyleBoxFlat_6y843")
show_percentage = false

[node name="label" type="Label" parent="timer"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 1
anchors_preset = -1
anchor_top = -0.263
anchor_right = 1.0
anchor_bottom = 1.263
offset_top = -0.00299978
offset_bottom = 0.00300026
grow_horizontal = 2
text = "0:00"
label_settings = SubResource("LabelSettings_daqce")
horizontal_alignment = 1
vertical_alignment = 1
